Fix CSS for logo on mobile

--- a/styles.css
+++ b/styles.css
@@ -113,8 +113,8 @@ body, html {
     }
 
     .logo {
-        width: 70px;
-        height: 70px;
+        width: 100px;
+        height: 100px;
     }
 
     .section h2 {
@@ -132,8 +132,8 @@ body, html {
     }
 
     .logo {
-        width: 50px;
-        height: 50px;
+        width: 80px;
+        height: 80px;
     }
 
     .section h2 {
